k8s/infra/network/gateway/envs/dbg/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
spec:
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.8.9.80
